--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,21 @@
 {
   "compilerOptions": {
+    "target":"es6",
+    "module":"commonjs",
     "noEmitOnError": true,
+    "outDir":"./dist",
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    //the lib here is redundant because if we remove/comment we get the same setting 
+    // by default from the "target": "es6" property.
+    "lib": [
+      "DOM",
+      "es6",
+      "DOM.Iterable",
+      "ScriptHost"
+    ]
   },
-  "exclude": ["node_modules", "ts-files-storage"]
+  "exclude": ["node_modules", "ts-files"]
 }
